--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ pickle-email-*.html
 config/initializers/secret_token.rb
 config/secrets.yml
 
-## Environment normalisation:
+## Environment normalization:
 /.bundle
 /vendor/bundle
 
