--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ pickle-email-*.html
 config/initializers/secret_token.rb
 config/secrets.yml
 
+/db/schema.rb
 ## Environment normalization:
 /.bundle
 /vendor/bundle
