--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ pickle-email-*.html
 config/initializers/secret_token.rb
 config/secrets.yml
 config/database.yml
+config/environment_variables.yml
 
 /db/schema.rb
 ## Environment normalization:
