--- a/config/database.yml
+++ b/config/database.yml
@@ -84,3 +84,5 @@ test:
 production:
   <<: *default
   database: karate_production
+  username: deployer
+  password: <%= ENV['DATABASE_PASSWORD'] %>
