Some small changes

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ upstream puma {
 
 server {
   listen 80 default_server deferred;
-  server_name draw.fska.com.ua;
+  # server_name draw.fska.com.ua;
 
   root /home/deployer/apps/karate/current/public;
   access_log /home/deployer/apps/karate/current/log/nginx.access.log;
